[master]Moved views to different folder and partial about page

--- a/Test/WebContent/Styles/formStyle.css
+++ b/Test/WebContent/Styles/formStyle.css
@@ -1,5 +1,14 @@
 @CHARSET "ISO-8859-1";
 
+.dahsboad {
+  display: grid;/* 
+  height: 100vh; */
+  
+  grid-template-areas:    "header  header"
+                          "nav    main"
+                          "footer footer";
+}
+
 #loginForm
 {
 	position: relative;
