--- a/Test/WebContent/view/about-home.html
+++ b/Test/WebContent/view/about-home.html
@@ -1,6 +1,8 @@
-<div class="dashboard">
-	<div></div>
-	<div></div>
-	<div></div>
-	<div></div>
+<div class="grid-container">
+  <div class="item1">Header</div>
+  <div class="item2">
+ <!--  <img src ="imgs/myphoto.PNG"> -->
+  	<span class = "img"/>
+  </div>
+  <div class="item3">Main</div>  
 </div>
