--- a/Test/WebContent/view/about-home.html
+++ b/Test/WebContent/view/about-home.html
@@ -1,8 +1,9 @@
 <div class="grid-container">
   <div class="item1">Header</div>
-  <div class="item2">
- <!--  <img src ="imgs/myphoto.PNG"> -->
-  	<span class = "img"/>
-  </div>
+  <div class = "image">
+  	<img src ="imgs/myphoto.PNG" style="object-fit: cover;max-width: 100%;
+    max-height: 100%;">
+  	</div>	
+  <div class="item2"></div>	
   <div class="item3">Main</div>  
-</div>
+</div>	
