--- a/Test/WebContent/view/about-home.html
+++ b/Test/WebContent/view/about-home.html
@@ -1,9 +1,22 @@
-<div class="grid-container">
+<!-- <div class="grid-container">
   <div class="item1">Header</div>
   <div class = "image">
-  	<img src ="imgs/myphoto.PNG" style="object-fit: cover;max-width: 100%;
-    max-height: 100%;">
+  	<img src ="imgs/myphoto.PNG" style= "object-fit:contain">
   	</div>	
   <div class="item2"></div>	
   <div class="item3">Main</div>  
-</div>	
+</div>	 -->
+
+<div>
+	<div class = "image col-md-2" >
+	<img src ="imgs/myphoto.PNG">
+	<div class = "menu"></div>
+	</div>
+	<div class = "col-md-6">
+	<div class = "header">
+		<h1 class="h2">Welcome Dr.{{}}</h1>
+	</div>
+	<div class = "material"></div>
+	</div>
+
+</div>
